# rl-fundamentals-reference

./: .gitignore  AGENTS.md  README.md  prepare_student_repo.py  pyproject.toml  requirements.txt  setup.py
algorithms/bandits/: epsilon_greedy.py  ucb.py
algorithms/common/: base_agent.py  dp_agent.py  mc_agent.py  planning_agent.py  td_agent.py
algorithms/dynamic_programming/: policy_iteration.py  value_iteration.py
algorithms/monte_carlo/: exploring_starts.py  off_policy.py  on_policy.py  viz.py
algorithms/planning/: dyna.py  dyna_plus.py
algorithms/temporal_difference/: expected_sarsa.py  q_learning.py  sarsa.py
assignments/: bandits.md  dynamic_programming.md  markov_decision_processes.md  mc_star_estimation_exercise.md  monte_carlo.md  planning.md  template.md  temporal_difference.md
checks/: __init__.py  __main__.py  _helpers.py  bandits.py  dynamic_programming.py  markov_decision_processes.py  monte_carlo.py  planning.py  temporal_difference.py
communications/: 2026-03-05-student-update-email.md
environment/: blocking_maze.py  jacks_car_rental.py  k_armed_bandit.py  planning_maze.py  planning_maze__old.py  temp_jcr_viz.py  temp_jcr_viz_value.py
environment/bandits/: k_armed_bandit.py
environment/dynamic_programming/: temp_jcr_viz.py  temp_jcr_viz_value.py
exercises/mdps/: utils.py  (+4 more)
lecture_examples/: dyna_handwritten.py
tests/: conftest.py  support.py  test_checks_cli.py  test_prepare_student_repo.py  test_regressions.py  test_smoke_algorithms.py
utils/: custom_tree.txt  general.py  generate_file_tree.py  prepare_student_repo.py  todo.md
(+61 files in other folders)
