[project]
name = "rl-fundamentals-reference"
version = "0.1.0"
description = "Reference implementations and course material for an introductory reinforcement learning course."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "gymnasium==0.28.1",
    "matplotlib==3.9.2",
    "moviepy==1.0.3",
    "numpy==1.24.1",
    "pandas==1.5.3",
    "scipy==1.14.1",
    "seaborn==0.13.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.12.4",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82"]